[project]
name = "PandaProxy"
version = "0.1.0"
description = "BambuLab Camera Fan-Out Proxy - Proxy camera streams to multiple clients"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.21.1",
]

[project.scripts]
pandaproxy = "pandaproxy.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pandaproxy"]
include = ["src/pandaproxy/*.cer"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["pandaproxy"]
