[project]
name = "PandaProxy"
version = "0.1.0"
description = "BambuLab Multi-Service Proxy - Proxy camera, MQTT, and FTP from BambuLab printers"
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.5.0",
    "typer>=0.21.1",
    "cryptography>=41.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.scripts]
pandaproxy = "pandaproxy.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pandaproxy"]
include = ["src/pandaproxy/*.cer"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["pandaproxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 30
